# parallel_programming

./: README.md
MPI_collective/: CMakeLists.txt  bmp_reader.cpp  main.cpp
MPI_p2p/: CMakeLists.txt  bmp_reader.h  main.cpp
parallel_programming/: CMakeLists.txt  bmp_reader.cpp  for_process.cpp  main.cpp  methods.cpp  methods.h
